@@ -12,4 +12,6 @@ this repository contains the full copyright notices and license terms. -->
     <field name="shipment"/>
     <field name="moves" colspan="4" widget="many2many"/>
     <field name="children" colspan="4"/>
+    <label name="state"/>
+    <field name="state"/>
 </form>
