@@ -5,4 +5,5 @@ this repository contains the full copyright notices and license terms. -->
     <field name="rec_name"/>
     <field name="shipment"/>
     <field name="type"/>
+    <field name="state"/>
 </tree>
