@@ -5,6 +5,7 @@ this repository contains the full copyright notices and license terms. -->
     <field name="rec_name"/>
     <field name="type"/>
     <field name="shipment"/>
+    <field name="state"/>
     <field name="parent" tree_invisible="1"/>
     <field name="children" tree_invisible="1"/>
 </tree>
